# ai-debate-coach

./: .env.example  .gitignore  AI_辩论教练后端开工清单与Prompt.docx  FRONTEND_HANDOFF.md  FRONTEND_HANDOFF_ZH.md  README.md  TEST_DOCUMENT.md  alembic.ini  pyproject.toml  论点攻防_项目文档.docx
app/: __init__.py  config.py
app/clients/: __init__.py  llm_client.py
app/controllers/: __init__.py  debate_controller.py
app/models/: __init__.py  evaluation.py  message.py  session.py
app/repositories/: __init__.py  evaluation_repository.py  message_repository.py  session_repository.py
app/schemas/: __init__.py  debate.py  evaluation.py
app/services/: __init__.py  debate_service.py  evaluation_service.py  session_service.py
app/utils/: __init__.py  errors.py  evaluation_parser.py  http.py  prompt_builder.py
examples/frontend/: api.js
migrations/: env.py
migrations/versions/: 20260421_0001_initial_tables.py
tests/: conftest.py  test_evaluate_api.py  test_prompt_builder.py  test_start_api.py  test_stream_api.py
